# jobber-ai

./: .gitignore  README.md  main-deprecated.py  main.py  pyproject.toml  test_connections.py
.github/workflows/: daily-jobs.yml
src/Scrapper/: index.py
