[project]
name = "jobber-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "beautifulsoup4>=4.15.0",
    "google-auth>=2.53.0",
    "gspread>=6.2.1",
    "langchain>=1.3.4",
    "langchain-core>=1.4.1",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
